# multi-lang-eks-blueprints-cdk

./: .gitignore  Makefile  README.md  gen_proto.sh  go.mod  protoc_gen.sh
go/: addressbook.pb.go  addressbook_grpc.pb.go  build.go  go.mod  main.go
go/codegen/: addressbook.pb.go  addressbook_grpc.pb.go  cluster.pb.go  cluster_grpc.pb.go
go/example/: main.go
proto/: addons.proto  addressbook.proto  cluster.proto  cluster_provider.proto  cluster_providers.proto  resource_provider.proto  team.proto  teams.proto
python/: addressbook_pb2.py  addressbook_pb2.pyi  addressbook_pb2_grpc.py  cluster_pb2.py  cluster_pb2.pyi  cluster_pb2_grpc.py
scripts/: codegen.sh
sdks/go/: README.md  build.go  go.mod
sdks/go-sdk/: README.md  build.go
sdks/go-sdk/codegen/: addons.pb.go  cluster.pb.go  cluster_grpc.pb.go  cluster_providers.pb.go  teams.pb.go
sdks/go-sdk/example/: main.go
sdks/go/codegen/: addons.pb.go  cluster.pb.go  cluster_grpc.pb.go  cluster_provider.pb.go  resource_provider.pb.go  resource_providers.pb.go  team.pb.go
sdks/go/example/: main.go
sdks/go/proto/: addons.pb.go  cluster.pb.go  cluster_grpc.pb.go  cluster_provider.pb.go  resource_provider.pb.go  team.pb.go
sdks/python/: README.md  builder.py  example.py  pyproject.toml  test.py
sdks/python/proto/: addons_pb2.py  addons_pb2.pyi  cluster_pb2.py  cluster_pb2.pyi  cluster_pb2_grpc.py  cluster_provider_pb2.py  cluster_provider_pb2.pyi  resource_provider_pb2.py  resource_provider_pb2.pyi  resource_providers_pb2.py  resource_providers_pb2.pyi  team_pb2.py  team_pb2.pyi  teams_pb2.py
sdks/python/src/: builder.py
sdks/python/src/codegen/: cluster_providers_pb2.pyi
sdks/python/src/eks_blueprints_python_sdk/: builder.py
sdks/python/src/eks_blueprints_python_sdk/codegen/: addons_pb2.py  addons_pb2.pyi  cluster_pb2.py  cluster_pb2.pyi  cluster_pb2_grpc.py  cluster_providers_pb2.py
sdks/rust/: Cargo.toml  README.md  build.rs
sdks/rust/examples/: main.rs
sdks/rust/src/: build.rs  builder.rs  codegen.rs  lib.rs  proto.rs
sdks/rust/src/example/: main.rs
sdks/rust/src/proto/: proto.rs  proto.tonic.rs
server/: package.json
server/lib/: addons.ts  cluster.ts  cluster_provider.ts  index.proto.ts  index.ts  resource_provider.ts  team.ts
ts/: package.json
ts/lib/: addressbook.ts  cluster.ts
