[package]
name = "rust-sdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.9"
prost = "0.11"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-stream = "0.1"

async-stream = "0.2"
async-trait = "0.1.71"
futures = "0.3.28"
async_fn_traits = "0.1.1"

[build-dependencies]
tonic-build = "0.9"

[[example]]
name = "client-example"
path = "examples/main.rs"
