[package]
name = "rust-sdk"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
exclude = ["examples/", "build.rs"]
description = "Rust client for EKS Blueprints gRPC API"
documentation = "https://aws-quickstart.github.io/cdk-eks-blueprints/"
readme = "README.md"
repository = "https://github.com/zjaco13/multi-lang-eks-blueprints-cdk"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.9"
prost = "0.11"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-stream = "0.1"

async-stream = "0.2"
async-trait = "0.1.71"
futures = "0.3.28"
async_fn_traits = "0.1.1"

[build-dependencies]
tonic-build = "0.9"

[[example]]
name = "client-example"
path = "examples/main.rs"
